# identity-service

./: .gitignore  .legitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  Makefile  README.md  SECURITY.md  identity-service-backend-0.1.10.tgz  identity-service-backend-0.1.8.tgz  identity-service-docs-0.0.7.tgz  identity-service-ui-0.1.6.tgz  index.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/linters/: .golangci.yaml  .markdownlint.yml  .protolintrc.yml  .pylintrc  .trivy.yml  sonar-project.properties
.github/workflows/: CI.yml  build-push-docker.yaml  ci-cd-dev.yml  ci.yaml  conventional_commits.yml  corona-blackduck.yml  dependency.yml  lint.yml  pre-commit.yml  publish.yml  release-python-sdk.yml  release-samples.yml  release-test.yaml  release.yml  reusable-docker.yml  (+5 more)
backend/: .gitignore  .mockery.yaml  README.md  go.mod  go.sum
demos/: README.md
docs/: .env-example  .gitignore  docusaurus.config.ts  generatedSidebarsProtodocs.js  package-lock.json  package.json  sidebars.ts
frontend/: .env.sample  .gitignore  .prettierrc  .yarnrc.yml  README.md  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
samples/: .gitignore  README.md  docker-compose.yaml
samples/mcp/currency_exchange/: .env.sample  Dockerfile  main.py  pyproject.toml  test_client.py
scripts/: mockery.sh  unit-test.sh
ui/: .env.sample  .yarnrc.yml  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
(+1793 files in other folders)
